Setup/K8S/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: covid

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mass-covid-testing-api-deployment
  namespace: covid
spec:
  replicas: 5
  selector:
    matchLabels:
      app: mass-covid-testing-api
  template:
    metadata:
      labels:
        app: mass-covid-testing-api
    spec:
      containers:
        - name: mass-covid-testing-api-pod
          image: scholtz2/mass-covid-testing-api:latest
          imagePullPolicy: Always
          ports:
          -
            containerPort: 80
            protocol: "TCP"
          readinessProbe:
              exec:
                command:
                - cat
                - /app/ready.txt
              initialDelaySeconds: 120
              periodSeconds: 20

---

apiVersion: v1
kind: Service
metadata:
  name: mass-covid-testing-api-service
  namespace: covid
spec:
  type: ClusterIP
  selector:
    app: mass-covid-testing-api
  ports:
    - protocol: TCP
      port: 80
      name: http

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mass-covid-testing-api-ingress
  namespace: covid
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - covid.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: covid.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: mass-covid-testing-api-service
          servicePort: 80
        path: /(.*)
